# flowk

./: .gitignore  ARCHITECTURE.md  CHEATBOOK.md  DOCUMENTATION.md  MANIFEST.in  README.md  api_example.py  async_example.py  auto_router_example.py  debug_tests.py  example.py  flowk_memory.db  multi_agent_composition.py  populate_dashboard.py  pyproject.toml  test_flowk_v2.py  v1_test.db  verify_v1_architecture.py  wheel_contents.txt
.flowk/: flowk.db
.github/workflows/: publish.yml
flowk/: __init__.py  cli.py  debugger.py  exceptions.py  executor.py  graph.py  memory.py  metrics.py  node.py  server.py  state.py  storage.py  utils.py  visualization.py
flowk/plugins/: __init__.py  base.py  llm.py  logger.py  storage.py
flowk/ui/: __init__.py  dashboard.py
flowk/ui/v2/: __init__.py  index.html  package-lock.json  package.json
flowk/ui/v2/src/: main.js  style.css
tests/: test_core.py
