[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowk"
version = "0.3.0.dev1"
authors = [
  { name="Folk Nallathambi", email="folkadonis7@gmail.com" },
]
description = "A lightweight, modular, and developer-first workflow orchestration engine for AI/LLM pipelines."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.10.0"]
redis = ["redis>=5.0.0"]

[project.urls]
"Homepage" = "https://github.com/folkadonis/flowk"
"Bug Tracker" = "https://github.com/folkadonis/flowk/issues"
